--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div>
     <h1>The repository name has changed to WaveTools:</h1>
-    <p><a href="https://mcpie87.github.io/WaveTools/" style="color: #00aaff;">https://mcpie87.github.io/...</a></p>
+    <p><a href="https://mcpie87.github.io/WaveTools/" style="color: #00aaff;">https://mcpie87.github.io/WaveTools/</a></p>
     <p>The page will redirect there in <span id="countdown">5</span> seconds.</p>
   </div>
   <script>
